# robotiq

./: LICENSE  README.md
robotiq_2f_gripper_action_server/: CMakeLists.txt
robotiq_2f_gripper_action_server/include/robotiq_2f_gripper_action_server/: robotiq_2f_gripper_action_server.h
robotiq_2f_gripper_action_server/launch/: close_gripper.launch  open_gripper.launch  robotiq_2f_gripper_action_client.launch  robotiq_2f_gripper_action_server.launch  robotiq_2f_gripper_controller.launch
robotiq_2f_gripper_action_server/src/: robotiq_2f_gripper_action_client_node.cpp  robotiq_2f_gripper_action_client_send_goal.cpp  robotiq_2f_gripper_action_server.cpp  robotiq_2f_gripper_action_server_node.cpp
robotiq_2f_gripper_control/: CMakeLists.txt
robotiq_2f_gripper_control/include/robotiq_2f_gripper_control/: conversion.h  joint_state_publisher.hpp  robotiq_2f_hw_usb.hpp  utils.h
robotiq_2f_gripper_control/launch/: robotiq_2f_gripper_serial.launch
robotiq_2f_gripper_control/nodes/: Robotiq2FGripperSimpleController.py
robotiq_2f_gripper_control/src/: conversion.cpp
robotiq_2f_gripper_control/src/robotiq_2f_gripper_control/: robotiq_2f_gripper_serial_node.cpp
robotiq_description/: package.xml
robotiq_description/config/robotiq_2f_140/: robotiq_2f_140.rviz  visual_parameters.yaml  (+1 more)
robotiq_description/launch/: view_robotiq_2f_140.launch  view_robotiq_agc_apl_159_002.launch  view_robotiq_agc_tip_220_140.launch  view_robotiq_ft_300.launch  view_robotiq_fts_300_cpl_062.launch
robotiq_ft_sensor/: CMakeLists.txt  package.xml
robotiq_ft_sensor/nodes/: rq_sensor.cpp  rq_tare_wrench.cpp
robotiq_ft_sensor/src/: low_pass_filter.cpp  rq_sensor_com.cpp
(+42 files in other folders)
